--- a/zh-CN/2.deployment-guide/6.check-after-installation.md
+++ b/zh-CN/2.deployment-guide/6.check-after-installation.md
@@ -20,10 +20,10 @@ OCP 部署完成后执行如下操作：
    http://<hostip>:<port>/login
    ```
 
-2. 在显示的登录页面，输入 OCP 的用户名（admin）和密码（root）。
+2. 在显示的登录页面，输入 OCP 的用户名（admin）和密码（aaAA11__）。
 
    > **注意**
-   >root 为 admin 用户的默认密码。为保证您的账户安全，建议您登录后修改密码，修改密码请参考 [修改登录密码](../3.ob-cloud-platform/3.userguide-features/8.user-center/2.change-the-logon-password.md)。
+   >aaAA11__ 为 admin 用户的默认密码。为保证您的账户安全，建议您登录后修改密码，修改密码请参考 [修改登录密码](../3.ob-cloud-platform/3.userguide-features/8.user-center/2.change-the-logon-password.md)。
 
    ![1220](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5450290461/p371882.png)
 
@@ -56,7 +56,7 @@ curl --user <username>:<password> 'http://<OCP_HOST>:<OCP_PORT>/api/v2/info'
 
 * username：OCP 的管理员用户 admin。
 
-* password：admin 用户的密码，默认为 root。
+* password：admin 用户的密码，默认为 aaAA11__。
 
 验证时间
 -------------------------
